--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -21,3 +21,5 @@ jobs:
         run: npm run build
       - name: Test
         run: npm run test
+      - name: Run e2e tests
+        run: npx playwright test
