--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -21,5 +21,7 @@ jobs:
         run: npm run build
       - name: Test
         run: npm run test
+      - name: Install playwright browsers
+        run: npx playwright install --with-deps
       - name: Run e2e tests
-        run: npx playwright test
+        run: npm run test:e2e
